--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,11 @@
 <resources>
 
     <style name="Widget.Theme.SampleUI.ActionBar.Fullscreen" parent="Widget.AppCompat.ActionBar">
-        <item name="android:background">@color/black_overlay</item>
+        <item name="android:background">@color/white</item>
     </style>
 
-    <style name="Widget.Theme.SampleUI.ButtonBar.Fullscreen" parent="">
-        <item name="android:background">@color/black_overlay</item>
+    <style name="Widget.Theme.SampleUI.ButtonBar.Fullscreen" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:background">@color/white</item>
         <item name="android:buttonBarStyle">?android:attr/buttonBarStyle</item>
     </style>
 </resources>
